--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 # Site settings
 title: Кодерские байки
 email: poetinthecode@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Занимаюсь веб-разработкой, а также программированием для мобильных устройств.
-  Наиболее интересные темы из моей работы и жизни стараюсь освещать на страницах этого блога.
+description: | # this means to ignore newlines until "baseurl:"
+  «Большинство хороших программистов делают свою работу не потому, что ожидают оплаты или признания, а потому что получают удовольствие от программирования.» Л.Торвальдс
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "poetofcode.com" # the base hostname & protocol for your site
 twitter_username: poetofcode
