--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,5 @@ github_username:  poetofcode
 # Build settings
 markdown: kramdown
 highlighter: rouge
+paginate: 10
 exclude: [_excluded, start_server.bat, tmpls_go, config_go.json, new_post.exe]
