--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,4 @@ markdown: kramdown
 highlighter: rouge
 paginate: 10
 exclude: [_excluded, start_server.bat, tmpls_go, config_go.json, new_post.exe]
+gems: [jekyll-paginate]
