Improved blog styles. Changed common site font

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Кодерские байки
+title: poetofcode.ru
 email: poetinthecode@gmail.com
 description: | # this means to ignore newlines until "baseurl:"
   «Большинство хороших программистов делают свою работу не потому, что ожидают оплаты или признания, а потому что получают удовольствие от программирования.» Л.Торвальдс
