--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: poetinthecode@gmail.com
 description: | # this means to ignore newlines until "baseurl:"
   «Большинство хороших программистов делают свою работу не потому, что ожидают оплаты или признания, а потому что получают удовольствие от программирования.» Л.Торвальдс
 baseurl: "" # the subpath of your site, e.g. /blog/
+excerpt_separator: <!--more-->
 url: "poetofcode.com" # the base hostname & protocol for your site
 twitter_username: poetofcode
 github_username:  poetofcode
