--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ markdown: kramdown
 highlighter: rouge
 paginate: 10
 exclude: [_excluded, start_server.bat, tmpls_go, config_go.json, new_post.exe]
-gems: [jekyll-paginate, jekyll-seo-tag]
+gems: [jekyll-paginate, jekyll-seo-tag, jekyll-sitemap]
