--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: | # this means to ignore newlines until "baseurl:"
   «Большинство хороших программистов делают свою работу не потому, что ожидают оплаты или признания, а потому что получают удовольствие от программирования.» Л.Торвальдс
 baseurl: "" # the subpath of your site, e.g. /blog/
 excerpt_separator: <!--more-->
-url: "poetofcode.ru" # the base hostname & protocol for your site
+url: "http://poetofcode.ru" # the base hostname & protocol for your site
 twitter_username: poetofcode
 github_username:  poetofcode
 author: poetofcode
@@ -19,7 +19,9 @@ social:
     - https://bitbucket.org/poetofcode
 twitter:
   username: poetofcode
-  card: summary
+  card: summary_large_image
+  site: "@poetofcode"
+  creator: poetofcode
 
 # Front matter defaults
 defaults:
