--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: | # this means to ignore newlines until "baseurl:"
   Блог о программировании и прочем саморазвитии. Ну и немного нытья, конечно, куда ж без этого. Welcome, если что ;)
 baseurl: "" # the subpath of your site, e.g. /blog/
 excerpt_separator: <!--more-->
-url: "http://poetofcode.ru/" # the base hostname & protocol for your site
+url: "http://poetofcode.ru" # the base hostname & protocol for your site
 twitter_username: poetofcode
 github_username:  poetofcode
 author: poetofcode
